...

    val viewModel = viewModel<CreatePasswordViewModel>()
    val context = LocalContext.current

    Background()
    Spacer(modifier = Modifier
        .testTag("CreatePasswordsScreen"))
    Column(
        verticalArrangement = Arrangement.Center,
        horizontalAlignment = Alignment.Companion.CenterHorizontally,
        modifier = Modifier.Companion
            .fillMaxWidth()
            .fillMaxHeight()
...
