...
}

@Composable
fun HomepageContent() {
    Spacer(
        modifier = Modifier
            .testTag("HomepageScreen")
    )
    Column(
        verticalArrangement = Arrangement.Center,
        horizontalAlignment = Alignment.Companion.CenterHorizontally,
        modifier = Modifier.Companion
            .fillMaxWidth()
...
